# breakout-dmg

./: Cargo.toml  LICENSE  README.md  keybindings.toml
aseprite/: mockup.aseprite  sprites.aseprite
src/: constants.rs  main.rs
src/components/: ball.rs  brick.rs  collider.rs  mod.rs  paddle.rs  velocity.rs  wall.rs
src/events/: collision.rs
src/resources/: keybindings.rs  mod.rs
src/systems/: fixed_update.rs  mod.rs  startup.rs
