[package]
name = "breakout-dmg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bevy = { version = "0.16.0", features = ["dynamic_linking", "serialize"] }
bevy_dylib = "0.16.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
